--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -45,7 +45,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gmail_list"
         android:layout_width="match_parent"
-        android:layout_height="195dp"
+        android:layout_height="wrap_content"
         android:scrollbars="none"
         android:layout_marginTop="1dp"
         android:orientation="horizontal" />
@@ -55,7 +55,7 @@
         android:layout_marginTop="2dp"
         android:layout_width="fill_parent"
         android:padding="0dp"
-        android:layout_height="220dp" />
+        android:layout_height="180dp" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gmail_list1"
         android:layout_width="match_parent"
@@ -67,10 +67,10 @@
         android:orientation="horizontal"
         android:layout_marginTop="0dp"
         android:background="@color/bg4"
-        android:layout_height="1dp">
+        android:layout_height="wrap_content">
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="10dp"
             android:textSize="15dp"
             android:textColor="@color/bg2"
@@ -91,11 +91,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="1dp"
         android:orientation="horizontal" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gmail_list2"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
