--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:text="Version 1.0"
+                android:text="Version 3.0"
                 android:textColor="@color/text2"
                 android:textSize="15dp" />
 
@@ -64,10 +64,6 @@
                 android:textColor="@color/text2"
                 android:textSize="15dp" />
 
-
-
-
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:text="Invision Software Solution"
+                android:text="YOU Softech"
                 android:textColor="#0000ff"
                 android:textStyle="bold"
                 android:id="@+id/click1"
