--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,7 +90,7 @@
                     android:text="Login"
                     android:layout_marginRight="5dp"
                     android:textAlignment="center"
-                    android:textSize="10dp" />
+                    android:textSize="18dp" />
 
                 <View
                     android:layout_width="2dp"
@@ -103,9 +103,9 @@
                     android:layout_weight="1"
                     android:layout_marginLeft="5dp"
                     android:id="@+id/txt_signup"
-                    android:textSize="10dp"
+                    android:textSize="18dp"
                     android:textAlignment="center"
-                    android:text="New User? Sign up"
+                    android:text="Sign up"
                     android:layout_height="wrap_content" />
             </LinearLayout>
             <LinearLayout
