--- a/app/src/main/res/layout/activity_searchactivity.xml
+++ b/app/src/main/res/layout/activity_searchactivity.xml
@@ -11,6 +11,8 @@
         android:id="@+id/acv"
         android:orientation="horizontal">
         <EditText
+            android:lines="1"
+            android:imeOptions="actionSearch"
             android:id="@+id/search_box"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -21,6 +23,7 @@
             android:paddingTop="12dp"
             android:textSize="14sp"
             android:hint="@string/search_hint"
+            android:singleLine="true"
             android:background="@drawable/edittext6"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
