--- a/app/src/main/res/layout/adapter_cart.xml
+++ b/app/src/main/res/layout/adapter_cart.xml
@@ -14,17 +14,17 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="5dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.5" />
             <ImageView
                 android:id="@+id/c_image"
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_gravity="center"
                 android:layout_height="100dp" />
             <TextView
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <LinearLayout
+                android:id="@+id/l2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
