--- a/app/src/main/res/layout/adapter_home1.xml
+++ b/app/src/main/res/layout/adapter_home1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="fill_parent"
@@ -62,11 +63,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
-                    android:background="@drawable/edittext2"
                     android:text="0"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    />
 
             </LinearLayout>
             <TextView
@@ -74,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/bg8"
                 android:text="SAVE "/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -86,6 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
                     android:maxLines="2"
+                    android:textStyle="bold"
                     android:text="Category Name"
                     android:textColor="@color/bg3"
                     android:textSize="18dp" />
@@ -108,6 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp">
             <TextView
+                android:visibility="gone"
                 android:id="@+id/h_e_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
