--- a/app/src/main/res/layout/adapter_home2.xml
+++ b/app/src/main/res/layout/adapter_home2.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_margin="1dp"
-    android:padding="2dp"
     card_view:cardCornerRadius="0dp"
     card_view:cardElevation="5dp"
-    card_view:cardBackgroundColor="@color/bg4">
+    card_view:cardBackgroundColor="@color/background">
     <RelativeLayout
+        android:layout_margin="1dp"
+        android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -30,20 +30,20 @@
         android:layout_below="@id/relimg"
         android:id="@+id/reltxt"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="35dp"
         android:textAlignment="center">
         <TextView
+            android:textStyle="bold"
             android:textAlignment="center"
             android:layout_centerVertical="true"
             android:id="@+id/h_e_s_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15dp"
+            android:textSize="13dp"
             android:maxLines="2"
-            android:textStyle="bold"
-            android:layout_margin="5dp"
+            android:layout_margin="1dp"
             android:text="Product Name"
-            android:textColor="#595959" />
+            android:textColor="#393939" />
     </RelativeLayout>
     </RelativeLayout>
    <!-- <LinearLayout
