--- a/app/src/main/res/layout/adapter_home6.xml
+++ b/app/src/main/res/layout/adapter_home6.xml
@@ -7,10 +7,10 @@
     android:layout_marginLeft="0dp"
     android:layout_marginRight="0dp"
     android:layout_marginTop="0dp"
-    android:layout_marginBottom="3dp"
+    android:layout_marginBottom="5dp"
     android:paddingBottom="5dp"
     android:orientation="horizontal"
-    card_view:cardCornerRadius="0dp"
+    card_view:cardCornerRadius="1dp"
     card_view:cardBackgroundColor="@color/bg4">
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,11 +23,16 @@
             <RelativeLayout
                 android:layout_width="150dp"
                 android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:text="5"
+                    android:id="@+id/qtycheck"/>
                 <ImageView
                     android:layout_centerHorizontal="true"
                     android:layout_width="110dp"
-                    android:layout_height="140dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:background="@color/white"
@@ -56,7 +61,7 @@
                     android:layout_below="@id/h_p_image"
                     android:layout_width="wrap_content"
                     android:background="@drawable/edittext8"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="6dp"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/h_p_unitlin"
                     android:paddingTop="5dp"
@@ -69,13 +74,14 @@
                         android:text=""
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
                     <ImageView
-                        android:layout_marginLeft="5dp"
                         android:id="@+id/unitarrow"
+                        android:layout_width="12dp"
+                        android:layout_height="13dp"
                         android:layout_centerVertical="true"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_toRightOf="@id/h_p_unit"/>
+                        android:layout_marginLeft="6dp"
+                        android:layout_toRightOf="@id/h_p_unit" />
                 </RelativeLayout>
 
             </RelativeLayout>
@@ -95,7 +101,7 @@
                     android:id="@+id/l1"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="3dp"
                     android:orientation="vertical">
                     <TextView
                         android:layout_width="match_parent"
@@ -103,7 +109,7 @@
                         android:text="Product Name"
                         android:paddingRight="10dp"
                         android:id="@+id/h_p_name"
-                        android:textSize="17dp"
+                        android:textSize="15dp"
                         android:textColor="@color/bg3"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
@@ -112,86 +118,99 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/sec"/>
-                <LinearLayout
-                    android:layout_below="@id/l1"
+                <RelativeLayout
+                    android:layout_below="@id/l3"
                     android:id="@+id/l2"
                     android:layout_width="match_parent"
                     android:layout_marginTop="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content">
+
                     <TextView
+                        android:id="@+id/id1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Save  "
-                        android:textStyle="bold"
-                        android:textColor="@color/bg8"/>
+                        android:layout_toLeftOf="@id/h_p_offer"
+                        android:text="Save "
+                        android:textColor="@color/red"
+                        android:textStyle="bold" />
+
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:textSize="17dp"
-                        android:background="@drawable/edittext9"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
                         android:id="@+id/h_p_offer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="10dp"
+                        android:paddingLeft="0dp"
+                        android:paddingRight="10dp"
+                        android:text="0"
                         android:textAlignment="center"
-                        android:text="0"/>
-                </LinearLayout>
+                        android:textColor="@color/red"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/l3"
-                    android:layout_below="@id/l2"
+                    android:layout_below="@id/l1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="1dp"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content">
 
                         <TextView
+                            android:layout_toLeftOf="@id/h_p_actual_cost"
+                            android:id="@+id/id2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="#000"
-                            android:text="MRP : \u20B9 " />
+                            android:textColor="#545454"
+                            android:text="MRP \u20B9" />
                         <TextView
-                            android:textColor="#000"
+                            android:layout_alignParentEnd="true"
+                            android:textColor="#545454"
+                            android:layout_marginRight="10dp"
                             android:id="@+id/h_p_actual_cost"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/strike" />
-                    </LinearLayout>
+                            android:background="@drawable/strike"
+                            android:layout_alignParentRight="true" />
+                    </RelativeLayout>
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="1dp"
                         android:orientation="horizontal">
 
                         <TextView
+                            android:layout_toLeftOf="@id/h_p_offer_cost"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="HShop : \u20B9 "
+                            android:text="Hshop \u20B9"
                             android:textStyle="bold"
                             android:textColor="@color/colorAccent"
                             android:textSize="17dp" />
 
                         <TextView
+                            android:layout_marginRight="10dp"
+                            android:layout_alignParentEnd="true"
                             android:id="@+id/h_p_offer_cost"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:textColor="@color/colorAccent"
-                            android:textSize="17dp" />
-                    </LinearLayout>
+                            android:textSize="17dp"
+                            android:layout_alignParentRight="true" />
+                    </RelativeLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="3dp"
                         android:orientation="vertical">
                         <TextView
                             android:layout_width="wrap_content"
@@ -204,17 +223,20 @@
                     </LinearLayout>
                 </LinearLayout>
 
+
                 <LinearLayout
+                    android:layout_alignParentEnd="true"
                     android:visibility="gone"
                     android:id="@+id/cartadd_min"
-                    android:layout_below="@id/l3"
-                    android:layout_marginTop="15dp"
+                    android:layout_below="@id/l2"
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true">
                     <Button
                         android:id="@+id/c_minus"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
                         android:text="-"
                         android:textAlignment="center"
                         android:background="@drawable/circle_receive_bg"
@@ -226,30 +248,33 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
-                        android:text="10"
+                        android:text="12"
                         android:textColor="@color/bg3" />
 
                     <Button
                         android:id="@+id/c_plus"
                         android:textAlignment="center"
-                        android:layout_width="25dp"
+                        android:layout_width="27dp"
                         android:background="@drawable/circle_receive_bg"
-                        android:layout_height="25dp"
+                        android:layout_height="27dp"
                         android:layout_marginRight="15dp"
                         android:text="+"
                         android:textColor="@color/bg1" />
 
                 </LinearLayout>
                 <Button
-                    android:layout_below="@id/l3"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@id/l2"
                     android:id="@+id/h_p_add"
-                    android:layout_width="130dp"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="14dp"
+                    android:layout_width="110dp"
+                    android:layout_height="33dp"
+                    android:layout_marginTop="11dp"
                     android:background="@drawable/edittext7"
                     android:text="ADD to cart"
                     android:textColor="@color/white"
-                    android:textSize="13dp" />
+                    android:textSize="13dp"
+                    android:layout_alignParentRight="true" />
                 <TextView
                     android:visibility="gone"
                     android:id="@+id/test"
@@ -263,7 +288,7 @@
                     android:id="@+id/test2"
                     android:visibility="gone"
                     android:layout_marginLeft="10dp"
-                    android:text=""
+                    android:text="0"
                     android:layout_toRightOf="@id/h_p_add"
                     android:layout_below="@id/l2"
                     android:layout_width="wrap_content"
